--- a/Search/search.html
+++ b/Search/search.html
@@ -95,10 +95,12 @@
               class="mx-4 form-control"
               id="floatingInput"
               placeholder="Search!"
-              onkeyup="search()"
               style="border-radius: 20px"
             />
           </div>
+          <button id="searchBtn" type="button" class="btn btn-danger">
+            Search
+          </button>
         </div>
       </nav>
 
@@ -354,6 +356,6 @@
       src="https://kit.fontawesome.com/8539ff3369.js"
       crossorigin="anonymous"
     ></script>
-    <script src="search.js"></script>
+    <script src="search2.js"></script>
   </body>
 </html>
