--- a/Login/login.html
+++ b/Login/login.html
@@ -38,6 +38,7 @@
       </div>
       <div class="emailDiv mt-2">
         <input
+          id="email"
           type="email"
           class="emailInput"
           placeholder="Email address or username"
@@ -45,7 +46,12 @@
         <i class="fa-solid fa-user-lock lockIcon"></i>
       </div>
       <div class="emailDiv mt-2">
-        <input type="password" class="emailInput" placeholder="Password" />
+        <input
+          id="password"
+          type="password"
+          class="emailInput"
+          placeholder="Password"
+        />
       </div>
       <div
         class="mt-3 width320 d-flex justify-content-between align-items-center"
@@ -54,13 +60,20 @@
           <input type="checkbox" id="checkbox" class="mr-2" />
           <span class="font12">Remember me</span>
         </div>
-        <a href="../index.html"
-          ><button class="btn-success loginBtn">LOG IN</button></a
+        <a id="logInLink" href="#"
+          ><button id="logInBtn" class="btn-success loginBtn">LOG IN</button></a
         >
       </div>
-      <p class="mt-2 font-weight-bolder fontgreen">Forgot your password?</p>
+      <a href="https://accounts.spotify.com/de/password-reset"
+        ><p class="mt-2 font-weight-bolder fontgreen">
+          Forgot your password?
+        </p></a
+      >
       <div class="accountDiv mt-3 pt-3 pb-2">Don't have an account?</div>
-      <button class="signup mt-2">SIGN UP FOR SPOTIFY</button>
+      <a
+        href="https://www.spotify.com/de/signup?forward_url=https%3A%2F%2Fopen.spotify.com%2F"
+        ><button class="signup mt-2">SIGN UP FOR SPOTIFY</button></a
+      >
       <div class="accountDiv mt-3 pt-2 font10">
         If your click "Log in with Facebook" and are not Spotify user, you will
         be registared and you agree to Spotify's
