--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Spotify - Webplayer</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -138,39 +138,43 @@
       <nav class="navbar sticky-top mb-3">
         <div class="d-flex align-items-center justify-content-between">
           <div class="d-flex"></div>
-            <i class="fa-solid fa-chevron-left chevrons"></i
-            ><i class="fa-solid fa-chevron-right chevrons"></i>
-          </div>
+          <i class="fa-solid fa-chevron-left chevrons"></i
+          ><i class="fa-solid fa-chevron-right chevrons"></i>
+        </div>
 
-          <div class="d-flex align-items-center" id="rightnav">
-            <div style="margin-right: 1rem">
-              <button
-                type="button"
-                class="btn btn-outline-white text-light"
-                style="border-radius: 20px"
-              >
-                Upgrade
-              </button>
-            </div>
-            <div class="dropdown">
-              <button
-                class="btn btn-dark dropdown-toggle"
-                type="button"
-                id="dropdownMenuButton1"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                style="border-radius: 25px;"
-              >
-                <img
-                  src="https://i.pinimg.com/564x/08/35/96/083596835424340eda90439fd20e5ee9.jpg"
-                  style="width: 30px; height: 30px; border-radius: 50%"
-                />
-                &nbsp;&nbsp;Gh0stxt&nbsp;&nbsp;
-              </button>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href="./Login/login.html">Log out</a></li>
-              </ul>
-            </div>
+        <div class="d-flex align-items-center" id="rightnav">
+          <div style="margin-right: 1rem">
+            <button
+              type="button"
+              class="btn btn-outline-white text-light"
+              style="border-radius: 20px"
+            >
+              Upgrade
+            </button>
+          </div>
+          <div class="dropdown">
+            <button
+              class="btn btn-dark dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton1"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              style="border-radius: 25px"
+            >
+              <img
+                src="https://i.pinimg.com/564x/08/35/96/083596835424340eda90439fd20e5ee9.jpg"
+                style="width: 30px; height: 30px; border-radius: 50%"
+              />
+              &nbsp;&nbsp;Gh0stxt&nbsp;&nbsp;
+            </button>
+            <ul
+              class="dropdown-menu dropdown-menu-dark"
+              aria-labelledby="dropdownMenuButton1"
+            >
+              <li>
+                <a class="dropdown-item" href="./Login/login.html">Log out</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
