--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 src="https://i.pinimg.com/564x/08/35/96/083596835424340eda90439fd20e5ee9.jpg"
                 style="width: 30px; height: 30px; border-radius: 50%"
               />
-              &nbsp;&nbsp;Gh0stxt&nbsp;&nbsp;
+              <span id="userName"></span>
             </button>
             <ul
               class="dropdown-menu dropdown-menu-dark"
