--- a/index.html
+++ b/index.html
@@ -81,51 +81,17 @@
       </ul>
       <div class="allplaylists mt-3">
         <ul>
-          <a><li class="nav-item-playlists">Random Blues Jazz</li></a>
-          <a><li class="nav-item-playlists">Random Rock Jojo jojo</li></a>
-          <a><li class="nav-item-playlists">Random Idk idk idk</li></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
+          <a><li class="nav-item-playlists">Blues</li> </li></a>
+          <a><li class="nav-item-playlists">Rock</li></a>
+          <a><li class="nav-item-playlists">Jazz</li></a>
+          <a><li class="nav-item-playlists">Rap</li></a>
           <a
             ><li class="nav-item-playlists">
-              Random blablasbla <i class="fa-solid fa-user-group"></i></li
+              POP <i class="fa-solid fa-user-group"></i></li
           ></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a
-            ><li class="nav-item-playlists">
-              Random blablasbla <i class="fa-solid fa-user-group"></i></li
-          ></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a><li class="nav-item-playlists">Random Blues Jazz</li></a>
-          <a><li class="nav-item-playlists">Random Rock Jojo jojo</li></a>
-          <a><li class="nav-item-playlists">Random Idk idk idk</li></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a
-            ><li class="nav-item-playlists">
-              Random blablasbla <i class="fa-solid fa-user-group"></i></li
-          ></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a
-            ><li class="nav-item-playlists">
-              Random blablasbla <i class="fa-solid fa-user-group"></i></li
-          ></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a><li class="nav-item-playlists">Random Blues Jazz</li></a>
-          <a><li class="nav-item-playlists">Random Rock Jojo jojo</li></a>
-          <a><li class="nav-item-playlists">Random Idk idk idk</li></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a
-            ><li class="nav-item-playlists">
-              Random blablasbla <i class="fa-solid fa-user-group"></i></li
-          ></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
-          <a
-            ><li class="nav-item-playlists">
-              Random blablasbla <i class="fa-solid fa-user-group"></i></li
-          ></a>
-          <a><li class="nav-item-playlists">Random blablasbla</li></a>
+          <a><li class="nav-item-playlists">Techno</li></a>
+          <a><li class="nav-item-playlists">Classic</li></a>
+          
         </ul>
       </div>
       <div>
