--- a/Login/login.html
+++ b/Login/login.html
@@ -12,6 +12,7 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../loader.css" />
   </head>
 
   <body>
@@ -81,6 +82,28 @@
         <span class="font-weight-bolder fontgreen">Privacy Policy</span>
       </div>
     </div>
+    <div class="loader" id="loader">
+      <div class="loader-inner">
+        <div class="loader-line-wrap">
+          <div class="loader-line"></div>
+        </div>
+        <div class="loader-line-wrap">
+          <div class="loader-line"></div>
+        </div>
+        <div class="loader-line-wrap">
+          <div class="loader-line"></div>
+        </div>
+        <div class="loader-line-wrap">
+          <div class="loader-line"></div>
+        </div>
+        <div class="loader-line-wrap">
+          <div class="loader-line"></div>
+        </div>
+      </div>
+    </div>
+    <script>
+      setTimeout(() => loader.classList.add("d-none"), 3 * 1000);
+    </script>
     <script src="./login.js"></script>
     <script
       src="https://kit.fontawesome.com/8539ff3369.js"
