--- a/Registrieren/registrieren.html
+++ b/Registrieren/registrieren.html
@@ -44,9 +44,18 @@
     <span> ____________________ or ____________________ </span>
     <br />
 
-    <section class="button">
+    <section class="button-style">
       <h3 id="h3">Sign up with your email address</h3>
-      <button></button>
+
+      <form>
+        <label for="username">What's your email?</label><br />
+        <input type="text" id="username" name="username" /><br />
+
+        <label for="password">Password</label><br />
+        <input type="password" id="password" name="password" />
+        <button>submit</button>
+      </form>
     </section>
+    <script src="registrieren.js"></script>
   </body>
 </html>
