--- a/Registrieren/registrieren.html
+++ b/Registrieren/registrieren.html
@@ -44,7 +44,7 @@
     <span> ____________________ or ____________________ </span>
     <br />
 
-    <section class="button-style">
+    <section class="log-in">
       <h3 id="h3">Sign up with your email address</h3>
 
       <form>
@@ -53,8 +53,8 @@
 
         <label for="password">Password</label><br />
         <input type="password" id="password" name="password" />
-        <button>submit</button>
       </form>
+      <button id="button-style">Log in</button>
     </section>
     <script src="registrieren.js"></script>
   </body>
