--- a/Search/search.html
+++ b/Search/search.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../loader.css" />
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css" />
     <script src="search.js" defer></script>
   </head>
   <body>
@@ -238,11 +238,7 @@
                     fill="#F5F5F5"
                   ></path></svg
               ></span>
-              <!-- <span onclick="playpauseTrack()"><svg class="mx-2" width="35" height="35" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M12 22C6.47967 21.994 2.00606 17.5204 2 12V11.8C2.10993 6.30455 6.63459 1.92797 12.1307 2.0009C17.6268 2.07382 22.0337 6.5689 21.9978 12.0654C21.9619 17.5618 17.4966 21.9989 12 22ZM10 7.50002V16.5L16 12L10 7.50002Z"
-                  fill="#F5F5F5"></path>
-              </svg></span> -->
+              
               <span class="mx-2 playpause-track" onclick="playpauseTrack()"
                 ><i class="fa fa-play-circle fa-5x"></i
               ></span>
@@ -330,13 +326,7 @@
                 d="M8 4.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5zM8 6a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 3a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm-3.5 1.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"
               /></svg
           ></span>
-
-          <!--         
-          <span><svg class="mx-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-              class="bi bi-volume-down" viewBox="0 0 16 16">
-              <path
-                d="M9 4a.5.5 0 0 0-.812-.39L5.825 5.5H3.5A.5.5 0 0 0 3 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 9 12V4zM6.312 6.39 8 5.04v5.92L6.312 9.61A.5.5 0 0 0 6 9.5H4v-3h2a.5.5 0 0 0 .312-.11zM12.025 8a4.486 4.486 0 0 1-1.318 3.182L10 10.475A3.489 3.489 0 0 0 11.025 8 3.49 3.49 0 0 0 10 5.525l.707-.707A4.486 4.486 0 0 1 12.025 8z" />
-            </svg></span>
+          
           <hr class="volumebarline" /> -->
 
           <i class="fa fa-volume-down volume"></i>
@@ -385,6 +375,6 @@
       src="https://kit.fontawesome.com/8539ff3369.js"
       crossorigin="anonymous"
     ></script>
-    <script src="search2.js"></script>
+    <script src="search.js"></script>
   </body>
 </html>
