--- a/Registrieren/registrieren.html
+++ b/Registrieren/registrieren.html
@@ -72,14 +72,14 @@
           placeholder="Create a password."
         /><br />
 
-        <label for="username">What should we call you?</label><br />
+        <label for="profileName">What should we call you?</label><br />
         <input
           type="text"
-          id="username"
-          name="username"
+          id="profileName"
+          name="profileName"
           placeholder="Enter a profile name."
         /><br />
-        <p>This appears on your profile.</p>
+        <p id="appearsOnProfile">This appears on your profile.</p>
 
         <legend>What's your date of birth?</legend>
         <div class="field-inline-block">
