--- a/Registrieren/registrieren.html
+++ b/Registrieren/registrieren.html
@@ -128,10 +128,31 @@
           <input type="radio" name="gender" value="prefer not to say" /> Prefer
           not to say
         </div>
+
+        <div class="check-list">
+          <input type="checkbox" id="ch-li1" name="ch-li1" />
+          <label for="ch-li1">
+            Please send me news and offers from Spotify.</label
+          ><br />
+          <input type="checkbox" id="ch-li2" name="ch-li2" />
+          <label for="ch-li2"
+            >Share my registration data with Spotify's content providers for
+            marketing purposes. Note that your data may be transferred to a
+            country outside of the EEA as described in our privacy
+            policy.</label
+          ><br />
+          <input type="checkbox" id="ch-li3" name="ch-li3" />
+          <label for="ch-li3">
+            I hereby agree to the <a href="#">Terms of Service</a> and consent
+            to the collection, processing and use of my personal data, as
+            described in more detail in the
+            <a href="#"> Privacy Statement</a>.</label
+          ><br /><br />
+        </div>
       </form>
       <button id="button-style">Sign up</button>
       <p class="logInText">
-        Have an account?<a class="logInLink" href="">Log in.</a>
+        Have an account?<a class="logInLink" href="#">Log in.</a>
       </p>
     </section>
     <script src="registrieren.js"></script>
