--- a/Registrieren/registrieren.html
+++ b/Registrieren/registrieren.html
@@ -155,6 +155,6 @@
         Have an account?<a class="logInLink" href="#">Log in.</a>
       </p>
     </section>
-    <script src="registrieren.js"></script>
+    <script type="module" src="registrieren.js"></script>
   </body>
 </html>
