--- a/Login/login.html
+++ b/Login/login.html
@@ -72,7 +72,7 @@
       >
       <div class="accountDiv mt-3 pt-3 pb-2">Don't have an account?</div>
       <a
-        href="https://www.spotify.com/de/signup?forward_url=https%3A%2F%2Fopen.spotify.com%2F"
+        href="../Registrieren/registrieren.html"
         ><button class="signup mt-2">SIGN UP FOR SPOTIFY</button></a
       >
       <div class="accountDiv mt-3 pt-2 font10">
@@ -104,7 +104,7 @@
     <script>
       setTimeout(() => loader.classList.add("d-none"), 3 * 1000);
     </script>
-    <script src="./login.js"></script>
+    <script type="module" src="./login.js"></script>
     <script
       src="https://kit.fontawesome.com/8539ff3369.js"
       crossorigin="anonymous"
