--- a/Registrieren/registrieren.html
+++ b/Registrieren/registrieren.html
@@ -152,7 +152,9 @@
       </form>
       <button id="button-style">Sign up</button>
       <p class="logInText">
-        Have an account?<a class="logInLink" href="#">Log in.</a>
+        Have an account?<a class="logInLink" href="../Login/login.html"
+          >Log in.</a
+        >
       </p>
     </section>
     <script type="module" src="registrieren.js"></script>
