--- a/Login/login.html
+++ b/Login/login.html
@@ -71,8 +71,7 @@
         </p></a
       >
       <div class="accountDiv mt-3 pt-3 pb-2">Don't have an account?</div>
-      <a
-        href="../Registrieren/registrieren.html"
+      <a href="../Registrieren/registrieren.html"
         ><button class="signup mt-2">SIGN UP FOR SPOTIFY</button></a
       >
       <div class="accountDiv mt-3 pt-2 font10">
