--- a/Search/search.html
+++ b/Search/search.html
@@ -238,7 +238,7 @@
                     fill="#F5F5F5"
                   ></path></svg
               ></span>
-              
+
               <span class="mx-2 playpause-track" onclick="playpauseTrack()"
                 ><i class="fa fa-play-circle fa-5x"></i
               ></span>
@@ -326,8 +326,9 @@
                 d="M8 4.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5zM8 6a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 3a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm-3.5 1.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"
               /></svg
           ></span>
-          
-          <hr class="volumebarline" /> -->
+
+          <hr class="volumebarline" />
+          -->
 
           <i class="fa fa-volume-down volume"></i>
           <input
